BUG navbar fixed-top was overlapping the header added 50px to body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@
   body {
       overflow-x: hidden;
       box-sizing: border-box;
+      padding-top: 50px;
     }
     
     .navbar .nav-link {
